--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">My Application</string>
+    <string name="app_name">Journal</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_creation_notes">CreationNotes</string>
 </resources>
